style(select): fix for check icon overlapping option content
affects: @synerise/ds-select

--- a/packages/components/select/src/style/select.mixin.less
+++ b/packages/components/select/src/style/select.mixin.less
@@ -77,6 +77,9 @@
     font-size: 20px;
     z-index: 11;
   }
+   > .@{ant-prefix}-select-item-option-content{
+    padding-right:32px;
+  }
 }
 
 .@{ant-prefix}-select-dropdown {
